--- a/index.html
+++ b/index.html
@@ -6,26 +6,27 @@
 <body>
 
   <!-- Header Section -->
+   <header>
   <h1>Kulant Yatra <img width="100" src="images/himalaya-logo-design-vector-images-natural-beauty-mountain-logo-design-mountain-logo-design-sun-icon-landscapes-logo-natural-316714687.PNG" alt="logo"></h1>
      
   <p><i>Your Gateway to Kullu & Manali</i></p>
   <hr>
-
-  <!-- About Section -->
-  <h2>About Us</h2>
+</header>
+<main>
+    <section id="About us">
+         <!-- About Section -->
+           <h2>About Us</h2>
   <p>
     Kulant Yatra is a local travel platform helping you book homestays, adventures, and more in Kullu-Manali. We aim to provide affordable and eco-friendly travel experiences in the Himalayas.</p>
     <p> We provide convinient and easy booking experience for backpackers and tour lovers.
-  </p>
-
-  <!-- Image Section -->
+  </p></section>
+<section id="Gallery"><!-- Image Section -->
   <h2>Gallery</h2>
   <p>Some places you will love:</p>
   <img width="400" src="images/kaidhar.jpg" alt="Kaisdhar in Kullu"> <i><b> Kaisdhar trek</b></i>
  <p> <img width="400" src="images/Solang.jpg" alt="Solang Valley Manali"><i><b> Solang Valley</b></i></p>
- <p> <img width="400" src="images/beas.jpeg" alt="River Beas"> <i><b>Beas River</b></i></p>
-
-  <!-- Services Section -->
+ <p> <img width="400" src="images/beas.jpeg" alt="River Beas"> <i><b>Beas River</b></i></p></section>
+<section id="Services"><!-- Services Section -->
   <h2>Our Services</h2>
   <ul>
     <li>Homestay Bookings</li>
@@ -33,14 +34,13 @@
     <li>Taxi and Transport Services</li>
     <li>Guided Tours</li>
     <li>Trekking & Camping</li>
-  </ul>
-
+  </ul></section>
+<section id="Videos">
   <!-- Video section -->
    <h2>Check these videos</h2>
    <iframe width="400" height="315" src="https://www.youtube.com/embed/Wx-iCKs33q4?si=Ojz4Bfi3O7OYFYWr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-   <iframe width="400" height="315" src="https://www.youtube.com/embed/HEQMNEXmOqA?si=Gzdhl_tu5zUJLN2q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
-  <!-- Price List Section -->
+   <iframe width="400" height="315" src="https://www.youtube.com/embed/HEQMNEXmOqA?si=Gzdhl_tu5zUJLN2q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></section>
+<section id="Price List"> <!-- Price List Section -->
   <h2>Price List</h2>
   <ol>
     <li>Homestay: ₹800 - ₹1500 per night</li>
@@ -48,9 +48,9 @@
     <li>Taxi: Average ₹12 per km (May vary as per road condition) </li>
     <li>Guided Tour: ₹1500 per day</li>
     <li>Trekking: ₹2000 per day</li>
-  </ol>
+  </ol></section>
 
-  <!-- Form Section -->
+<section id="Booking"><!-- Form Section -->
   <h2>Book Now</h2>
   <form target="_blank" action="submission.html">
     <label for="name">Name:</label><br>
@@ -66,11 +66,14 @@
     <textarea id="message" name="message" rows="4" cols="40" placeholder="Please write your message to us for complete guidance for your tours..."></textarea><br><br>
 
    <input type="submit" value="Submit"> 
-  </form>
+  </form></section>
+  
 <a href="#">Back to top</a>
+</main>
+<footer>
   <!-- Footer Section -->
   <hr>
   <p>© 2025 Kulant Yatra | <a href="mailto:kulantyatra@gmail.com">kulantyatra@gmail.com</a> | Kullu, Himachal Pradesh</p>
-
+</footer>
 </body>
 </html>
