--- a/index.html
+++ b/index.html
@@ -37,18 +37,33 @@
   </ul></section>
 <section id="Videos">
   <!-- Video section -->
-   <h2>Check these videos</h2>
+   <h2>Check out these videos</h2>
    <iframe width="400" height="315" src="https://www.youtube.com/embed/Wx-iCKs33q4?si=Ojz4Bfi3O7OYFYWr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
    <iframe width="400" height="315" src="https://www.youtube.com/embed/HEQMNEXmOqA?si=Gzdhl_tu5zUJLN2q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></section>
 <section id="Price List"> <!-- Price List Section -->
   <h2>Price List</h2>
-  <ol>
-    <li>Homestay: ₹800 - ₹1500 per night</li>
-    <li>Paragliding: ₹2500 per person</li>
-    <li>Taxi: Average ₹12 per km (May vary as per road condition) </li>
-    <li>Guided Tour: ₹1500 per day</li>
-    <li>Trekking: ₹2000 per day</li>
-  </ol></section>
+  <table border="4">
+       <tr>
+        <th>Adventure and Accomodation</th>
+        <th>Price</th>
+       </tr>
+       <tr>
+        <td>Homestay</td>
+        <td> ₹800- ₹1500 per night </td>
+        <tr>
+        <td>Paragliding</td>
+        <td>₹2500 per person</td></tr>
+        <tr><td>Taxi</td><td> Average ₹12 per km (May vary as per road condition)</td></tr>
+       <tr>
+        <td>Guided Tour</td>
+        <td> ₹1500 per day</td>
+       </tr>
+       <tr>
+        <td>Trekking</td>
+        <td>₹2000 per day</td>
+       </tr>
+      </table>
+</section>
 
 <section id="Booking"><!-- Form Section -->
   <h2>Book Now</h2>
@@ -70,7 +85,7 @@
   
 <a href="#">Back to top</a>
 </main>
-<footer>
+<footer id="footer">
   <!-- Footer Section -->
   <hr>
   <p>© 2025 Kulant Yatra | <a href="mailto:kulantyatra@gmail.com">kulantyatra@gmail.com</a> | Kullu, Himachal Pradesh</p>
